--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </form>
                 </section>
                 <footer>
-                    <p>Psycho Pancake @Davy/2024</p>
+                    <p>Site Doceria @Davy/2024</p>
                 </footer>
             </main>
         </div>
